# gcode-optimizer

./: .env  .gitignore  1001.cnc  README.md  coc-settings.json  docker-compose.override.yml  docker-compose.yml  generate_docker_cmd.sh  haskell-template.cabal  package.yaml  stack.yaml
.devcontainer/: devcontainer.json
.devcontainer/docker-docker/: .gitrepo
.devcontainer/git-docker/: .gitrepo
.devcontainer/hls-docker/: .gitrepo
.devcontainer/neovim-docker/: .gitrepo
docker-docker/: .gitrepo  Dockerfile  generate_docker_cmd
git-docker/: .gitrepo
hie-docker/: .gitrepo
hls-docker/: .gitrepo
neovim-docker/: .gitrepo
src/: AST.hs  GCodeGenerator.hs  GCodeParser.hs  Main.hs  Optimizer.hs  TimeEstimator.hs
