name:                haskell-template
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://k-ishigaki.github.io/
license:             MIT
license-file:        LICENSE
author:              Kazuki Ishigaki
maintainer:          k-ishigaki@frontier.hokudai.ac.jp
copyright:           2020 Kazuki Ishigaki
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-template
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
